--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -32,7 +32,7 @@
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="/">Home</a>
           <a class="nav-item nav-link" href="/profil">Profil</a>
-          <a class="nav-item nav-link" href="/create job">Angebot Erstellen</a>
+          <a class="nav-item nav-link" href="/create-job">Angebot Erstellen</a>
           <a class="nav-item nav-link" href="/">Als Bereit Melden</a>
           <a class="nav-item nav-link" href="/settings">Einstellungen</a>
           <a class="nav-item nav-link" href="/logout">Logout</a>
