--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -38,7 +38,9 @@
           <a class="nav-item nav-link" href="/logout">Logout</a>
           {% else %}
           <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="signUp" href="/sign-up"
+            >Registrieren</a
+          >
           {% endif %}
         </div>
       </div>
