added create job to backend

--- a/flask/website/templates/create_job.html
+++ b/flask/website/templates/create_job.html
@@ -99,6 +99,6 @@ block content %}
       />
     </div>
   </div>
-  <button type="submit" class="btn btn-primary">Account Erstellen</button>
+  <button type="submit" class="btn btn-primary">Angebot Erstellen</button>
 </form>
 {% endblock %}
