--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -31,7 +31,7 @@
         <div class="navbar-nav">
           {% if user.is_authenticated %}
           <a class="nav-item nav-link" href="/">Home</a>
-          <a class="nav-item nav-link" href="/profil">Profil</a>
+          <a class="nav-item nav-link" href="/profile">Profil</a>
           <a class="nav-item nav-link" href="/create-job">Angebot Erstellen</a>
           <a class="nav-item nav-link" href="/">Als Bereit Melden</a>
           <a class="nav-item nav-link" href="/settings">Einstellungen</a>
@@ -66,7 +66,7 @@
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
     <!-- Subblock -->
-    <div class="container">{% block content %} {% endblock %}</div>
+    {% block content %} {% endblock %}
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
