--- a/flask/website/templates/create_job.html
+++ b/flask/website/templates/create_job.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Angebot Erstellen{% endblock %} {%
 block content %}
-<div class="container m-lg-5 m-3">
+<div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
   <form method="post">
     <h1 class="text-center">Angebot Erstellen</h1>
     <!-- name -->
