--- a/flask/website/templates/profile.html
+++ b/flask/website/templates/profile.html
@@ -6,27 +6,40 @@
       <tr>
         <td><h4>Name</h4></td>
         <td>
-          <input
-            type="text"
-            name="name"
-            value="{{ user.first_name }} {{ user.last_name }}"
-          />
+          <form method="POST" class="form-inline flex-nowrap">
+            <input
+              type="text"
+              name="name"
+              class="form-control-plaintext"
+              value="{{ user.first_name }} {{ user.last_name }}"
+            />
+          </form>
         </td>
       </tr>
       <tr>
         <td><h4>Email</h4></td>
         <td>
-          <input type="text" name="email" value="{{ user.email }}" />
+          <form method="POST" class="form-inline flex-nowrap">
+            <input
+              type="text"
+              name="email"
+              class="form-control-plaintext"
+              value="{{ user.email }}"
+            />
+          </form>
         </td>
       </tr>
       <tr>
         <td><h4>Wohnort</h4></td>
         <td>
-          <input
-            type="text"
-            name="location"
-            value="{{ user.location.post_code }} {{user.location.city.name }}"
-          />
+          <form method="POST" class="form-inline flex-nowrap">
+            <input
+              type="text"
+              name="location"
+              class="form-control-plaintext"
+              value="{{ user.location.post_code }} {{user.location.city.name }}"
+            />
+          </form>
         </td>
       </tr>
       <tr>
@@ -34,7 +47,14 @@
       </tr>
     </tbody>
   </table>
-  <textarea class="textarea"></textarea>
+  <form
+    method="POST"
+    onsubmit="document.getElementsByName('description')[0].value = document.getElementById('description').value;"
+  >
+    <textarea id="description" class="form-control" rows="5">
+{{ user.description }}</textarea
+    >
+  </form>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -54,6 +74,35 @@
   </table>
 </div>
 <script>
-  // for button with that you can svae
+  let create_submit = function create_submit() {
+    let submit = document.createElement("input");
+    submit.type = "submit";
+    submit.value = "Speichern";
+    submit.classList.add("btn", "btn-primary");
+    return submit;
+  };
+  let inputs = document.getElementsByClassName("form-control-plaintext");
+  for (let input of inputs) {
+    input.addEventListener(
+      "input",
+      function add_submit() {
+        input.parentElement.appendChild(create_submit());
+      },
+      { once: true }
+    );
+  }
+  let description_textarea = document.getElementById("description");
+  description_textarea.addEventListener(
+    "input",
+    function () {
+      let hidden = document.createElement("input");
+      hidden.type = "hidden";
+      hidden.name = "description";
+      let submit = create_submit();
+      description_textarea.parentElement.appendChild(hidden);
+      description_textarea.parentElement.appendChild(submit);
+    },
+    { once: true }
+  );
 </script>
 {% endblock %}
