--- a/flask/website/templates/sign_up.html
+++ b/flask/website/templates/sign_up.html
@@ -1,76 +1,83 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
-<form method="POST">
-  <h3 align="center">Account Erstellen</h3>
-  <!-- Email -->
-  <div class="form-group">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">Email</span>
+<div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
+  <form method="POST">
+    <h3 align="center">Account Erstellen</h3>
+    <!-- Email -->
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Email</span>
+        </div>
+        <input
+          type="email"
+          class="form-control"
+          name="email"
+          placeholder="Enter email"
+        />
       </div>
-      <input
-        type="email"
-        class="form-control"
-        name="email"
-        placeholder="Enter email"
-      />
     </div>
-  </div>
-  <!-- Name -->
-  <div class="form-group">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">Vorname(n) und Nachname</span>
+    <!-- Name -->
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Vorname(n) und Nachname</span>
+        </div>
+        <input
+          type="text"
+          class="form-control"
+          name="first_name"
+          placeholder="Vorname(n)"
+        />
+        <input
+          type="text"
+          class="form-control"
+          name="last_name"
+          placeholder="Nachname"
+        />
       </div>
-      <input
-        type="text"
-        class="form-control"
-        name="first_name"
-        placeholder="Vorname(n)"
-      />
-      <input
-        type="text"
-        class="form-control"
-        name="last_name"
-        placeholder="Nachname"
-      />
     </div>
-  </div>
-  <!-- Password -->
-  <div class="form-group">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">Passwort</span>
+    <!-- Password -->
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Passwort</span>
+        </div>
+        <input
+          type="password"
+          class="form-control"
+          name="password"
+          placeholder="Passwort"
+        />
+        <input
+          type="password"
+          class="form-control"
+          name="password_confirm"
+          placeholder="Passwort Bestätigen"
+        />
       </div>
-      <input
-        type="password"
-        class="form-control"
-        name="password"
-        placeholder="Passwort"
-      />
-      <input
-        type="password"
-        class="form-control"
-        name="password_confirm"
-        placeholder="Passwort Bestätigen"
-      />
     </div>
-  </div>
-  <!-- Location -->
-  <div class="form-group">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text">Wohnort</span>
+    <!-- Location -->
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text">Wohnort</span>
+        </div>
+        <input
+          type="text"
+          class="form-control"
+          name="post_code"
+          placeholder="Postleitzahl"
+        />
+        <input
+          type="text"
+          class="form-control"
+          name="city"
+          placeholder="Stadt"
+        />
       </div>
-      <input
-        type="text"
-        class="form-control"
-        name="post_code"
-        placeholder="Postleitzahl"
-      />
-      <input type="text" class="form-control" name="city" placeholder="Stadt" />
     </div>
-  </div>
-  <button type="submit" class="btn btn-primary">Account Erstellen</button>
-</form>
+    <button type="submit" class="btn btn-primary">Account Erstellen</button>
+  </form>
+</div>
 {% endblock %}
