--- a/flask/website/templates/profile.html
+++ b/flask/website/templates/profile.html
@@ -1,56 +1,65 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
-  <table class="table table-striped mb-0">
-    <tbody>
-      <!-- Name -->
-      <tr>
-        <td><h4>Name</h4></td>
-        <td>
-          <form method="POST" class="form-inline flex-nowrap">
-            <input
-              type="text"
-              name="name"
-              class="form-control-plaintext"
-              value="{{ user.first_name }} {{ user.last_name }}"
-            />
-          </form>
-        </td>
-      </tr>
-      <!-- Email -->
-      <tr>
-        <td><h4>Email</h4></td>
-        <td>
-          <form method="POST" class="form-inline flex-nowrap">
-            <input
-              type="text"
-              name="email"
-              class="form-control-plaintext"
-              value="{{ user.email }}"
-            />
-          </form>
-        </td>
-      </tr>
-      <!-- Location -->
-      <tr>
-        <td><h4>Wohnort</h4></td>
-        <td>
-          <form method="POST" class="form-inline flex-nowrap">
-            <input
-              type="text"
-              name="location"
-              class="form-control-plaintext"
-              value="{{ user.location.post_code }} {{user.location.city.name }}"
-            />
-          </form>
-        </td>
-      </tr>
-      <!-- description-->
-      <tr>
-        <td><h4>Deine Beschreibung</h4></td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="d-flex flex-row justify-content-center container">
+    <div class=row">
+      <div class="column-1">
+        <img src="./websites/images/favicoon.ico" alt="this is a image" />
+      </div>
+      <div class="column-2">
+        <table class="table table-striped mb-0">
+          <tbody>
+            <!-- Name -->
+            <tr>
+              <td><h4>Name</h4></td>
+              <td>
+                <form method="POST" class="form-inline flex-nowrap">
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control-plaintext"
+                    value="{{ user.first_name }} {{ user.last_name }}"
+                  />
+                </form>
+              </td>
+            </tr>
+            <!-- Email -->
+            <tr>
+              <td><h4>Email</h4></td>
+              <td>
+                <form method="POST" class="form-inline flex-nowrap">
+                  <input
+                    type="text"
+                    name="email"
+                    class="form-control-plaintext"
+                    value="{{ user.email }}"
+                  />
+                </form>
+              </td>
+            </tr>
+            <!-- Location -->
+            <tr>
+              <td><h4>Wohnort</h4></td>
+              <td>
+                <form method="POST" class="form-inline flex-nowrap">
+                  <input
+                    type="text"
+                    name="location"
+                    class="form-control-plaintext"
+                    value="{{ user.location.post_code }} {{user.location.city.name }}"
+                  />
+                </form>
+              </td>
+            </tr>
+            <!-- description-->
+            <tr>
+              <td><h4>Deine Beschreibung</h4></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
   <form
     method="POST"
     onsubmit="document.getElementsByName('description')[0].value = document.getElementById('description').value;"
