--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
-  <h1 align="center">Hello</h1>
+  <h3 align="center">Jobs für dich</h3>
 </div>
 {% endblock %}
