--- a/flask/website/templates/profile.html
+++ b/flask/website/templates/profile.html
@@ -26,7 +26,7 @@
             <tr>
               <td><h4>Name</h4></td>
               <td>
-                <form method="POST" class="form-inline flex-nowrap">
+                <form method="post" class="form-inline flex-nowrap">
                   <input
                     type="text"
                     name="name"
@@ -40,7 +40,7 @@
             <tr>
               <td><h4>Email</h4></td>
               <td>
-                <form method="POST" class="form-inline flex-nowrap">
+                <form method="post" class="form-inline flex-nowrap">
                   <input
                     type="text"
                     name="email"
@@ -54,7 +54,7 @@
             <tr>
               <td><h4>Wohnort</h4></td>
               <td>
-                <form method="POST" class="form-inline flex-nowrap">
+                <form method="post" class="form-inline flex-nowrap">
                   <input
                     type="text"
                     name="location"
@@ -64,9 +64,14 @@
                 </form>
               </td>
             </tr>
+            <!-- Tags -->
+            <tr>
+              <td><h4>Deine Tags</h4></td>
+              <td id="tag_td"></td>
+            </tr>
             <!-- description-->
             <tr>
-              <td><h4>Deine Beschreibung</h4></td>
+              <td colspan="2"><h4>Deine Beschreibung</h4></td>
             </tr>
           </tbody>
         </table>
@@ -74,7 +79,7 @@
     </div>
   </div>
   <form
-    method="POST"
+    method="post"
     onsubmit="document.getElementsByName('description')[0].value = document.getElementById('description').value;"
   >
     <textarea id="description" class="form-control" rows="5">
@@ -102,7 +107,7 @@
       <tr>
         <!-- monday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -113,7 +118,7 @@
         </td>
         <!-- thuesday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -124,7 +129,7 @@
         </td>
         <!-- wendsday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -135,7 +140,7 @@
         </td>
         <!-- thuresday-->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -146,7 +151,7 @@
         </td>
         <!-- friday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -157,7 +162,7 @@
         </td>
         <!-- saturday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -168,7 +173,7 @@
         </td>
         <!-- sunday -->
         <td class="d-none">
-          <form method="POST" class="d-flex flex-column">
+          <form method="post" class="d-flex flex-column">
             <label for="start">Start Zeit</label>
             <input type="time" name="start" />
             <label for="start">End Zeit</label>
@@ -183,9 +188,12 @@
   <button id="timeblock_edit" class="btn btn-primary">Editieren</button>
   <script
     src="{{ url_for('static', filename='scripts/profile.js') }}"
-    id="timeblock_creater"
+    id="script"
     type="text/javascript"
     timeblocks="{{ timeblocks }}"
+    user_tags="{{ user.tags.all() }}"
+    ,
+    all_tags="{{ all_tags }}"
   ></script>
 </div>
 {% endblock %}
