--- a/flask/website/templates/sign_up.html
+++ b/flask/website/templates/sign_up.html
@@ -2,7 +2,7 @@
 content %}
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
   <form method="POST">
-    <h3 align="center">Account Erstellen</h3>
+    <h3 class="text-center">Account Erstellen</h3>
     <!-- Email -->
     <div class="form-group">
       <div class="input-group">
