--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -2,7 +2,7 @@
 %}
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
   <form method="post">
-    <h3 align="center">Login</h3>
+    <h3 class="text-center">Login</h3>
     <!-- Email -->
     <div class="form-group">
       <div class="input-group">
