--- a/flask/website/templates/profile.html
+++ b/flask/website/templates/profile.html
@@ -6,8 +6,8 @@
     <div class="row">
       <div class="col-3">
         <img
-          src="{{ url_for('views.profile_image') }}"
-          alt="this is a image"
+          src="{{ url_for('views.profile.profile_image') }}"
+          alt="Profilbild"
           style="
             max-width: 100%;
             max-height: 100%;
