--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -1,6 +1,45 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
 %}
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
-  <h3 class="text-center">Jobs für dich</h3>
+  <div>
+    <h3 class="text-center">Jobs für dich</h3>
+    <div>
+      {% for job in jobs %}
+      <div class="container">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th colspan="2">{{ job.name }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Arbeitgeber</th>
+              <th>
+                <img
+                  src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
+                  alt="Profilbild"
+                  style="max-width: 5vw; max-height: 5vh"
+                />
+              </th>
+            </tr>
+            <tr>
+              <th>Zeit</th>
+              <th>{{ job.duration // 60 }}:{{ job.duration % 60}}</th>
+            </tr>
+            <tr>
+              <th>Bezahlung</th>
+              <th>{{ job.payment // 100 }},{{ job.payment % 100 }}€</th>
+            </tr>
+            <tr>
+              <th>Start Zeit</th>
+              <th>{{ datetime.fromtimestamp(job.time_start) }}</th>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 {% endblock %}
