--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -33,7 +33,6 @@
           <a class="nav-item nav-link" href="/">Home</a>
           <a class="nav-item nav-link" href="/profile">Profil</a>
           <a class="nav-item nav-link" href="/create-job">Angebot Erstellen</a>
-          <a class="nav-item nav-link" href="/">Als Bereit Melden</a>
           <a class="nav-item nav-link" href="/settings">Einstellungen</a>
           <a class="nav-item nav-link" href="/logout">Logout</a>
           {% else %}
@@ -70,6 +69,11 @@
       integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
       crossorigin="anonymous"
     ></script>
+    <script
+      src="{{url_for('static', filename='scripts/socket.io.js')}}"
+      integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+      crossorigin="anonymous"
+    ></script>
     <script>
       socket = io();
       socket.on("connect", function (socket) {
@@ -91,6 +95,21 @@
     ></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="{{url_for('static', filename='scripts/jquery-3.2.1.slim.min.js')}}"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="{{url_for('static', filename='scripts/popper.min.js')}}"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="{{url_for('static', filename='scripts/bootstrap.min.js')}}"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
