--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -6,9 +6,14 @@
     <div class="container-fluid">
       <div
         class="row row-cols-xl-5 row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-sx-1"
+        style="gap: 1vw;"
       >
-        {% for i, job in enumerate(jobs) %}
-        <div id="job-{{ job.id }}" class="col">
+        {% for job in jobs %}
+        <div
+          id="job-{{ job.id }}"
+          class="col-1 border border-secondary p-0"
+          style="border-radius: 10%"
+        >
           <script>
             document
               .getElementById("job-{{ job.id }}")
@@ -17,22 +22,25 @@
                   "{{ url_for('views.job.job', id=job.id) }}";
               });
           </script>
-          <table class="table table-striped">
+          <table class="table table-striped table-no-border m-0">
             <thead>
               <tr>
-                <th colspan="2">{{ job.name }}</th>
+                <th colspan="2" class="text-center" style="border-top: none;">{{ job.name }}</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
                 <th>Arbeitgeber</th>
-                <th>
+                <th class="d-inline-flex">
                   <img
                     src="{{ url_for('views.profile.profile_image', user_id=job.employer.id) }}"
                     alt="Profilbild"
-                    class="w-100 hover-overlay"
+                    class="hover-overlay rounded-circle"
+                    style="width: 3vh; height: 3vh"
                     data-mdb-ripple-color="light"
                   />
+                  <p class="mb-0 ml-2">
+                    {{ job.employer.first_name }} {{ job.employer.last_name }}
+                  </p>
                 </th>
               </tr>
               <tr>
